feat: finalized users and accounts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.flyway.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/gbx
+spring.datasource.username=postgres
+spring.datasource.password=postgress
