--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.flyway.enabled=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/gbx
+spring.datasource.url=jdbc:postgresql://127.0.0.1/
 spring.datasource.username=postgres
-spring.datasource.password=postgress
+spring.datasource.password=postgres
